--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,7 @@
 			<div class="reseaux">
 				<div class="text-container">
 					<article class="text">
-						<p>Nos reseaux</p>
+						<p>Nos réseaux</p>
 					</article>
 				</div>
 				<button class="box-separation">
@@ -84,8 +84,8 @@
 					<img src="../images/galerie/lccoiffure.jpg" alt="merlish">
 				</div>
 				<article class="text-presentation">
-					<h1>Votre personnalite, <br> notre metier</h1><br>
-					<p>Notre salon de coiffure se démarque par un service personnalisé. Dynamismne, sérieux, conscience professionnelle sont les maîtres mots de notre travail. C'est en nous remettant en question chaque jour que nous répondons au mieux a l'attente de notre clientièle en terme de coiffure, de couleur et de mise en forme.</p>
+					<h1>Votre personnalité, <br> notre métier</h1><br>
+					<p>Notre salon de coiffure se démarque par un service personnalisé. Dynamismne, sérieux, conscience professionnelle sont les maîtres mots de notre travail. C'est en nous remettant en question chaque jour que nous répondons au mieux à l'attente de notre clientièle en terme de coiffure, de couleur et de mise en forme.</p>
 				</article>
 			</div>
 			<div class="salon">
@@ -164,11 +164,11 @@
 				</div>
 				<div class="km-container">
 					<div class="km-text-container">
-					<p>Nous avons fait le choix de travailler avec la gamme Kevin Murphy car elle est issue de la meme philosophie que celle des soins du visages. Les produits sont concus pour offrir legerete, performances, force et durabilite aux coiffures.
+					<p>Nous avons fait le choix de travailler avec la gamme Kevin Murphy car elle est issue de la même philosophie que celle des soins du visages. Les produits sont conçus pour offrir légèreté, performances, force et durabilité aux coiffures.
 					<br><br>
-					Dans sa recherche d'ingredients de part le monde, Kevin Murphy s'est tourne vers des societes ayant recours a la micro-agriculture et aux pratiques de cultures biologiques ou de recoltes sauvages a portee ecologique afin de garantir a la gamme une qualite la plus naturelle qu'elle soit.
+					Dans sa recherche d'ingrédients de part le monde, Kevin Murphy s'est tourné vers des sociétés ayant recours à la micro-agriculture et aux pratiques de cultures biologiques ou de récoltes sauvages à portée écologique afin de garantir à la gamme une qualité la plus naturelle qu'elle soit.
 					<br><br>
-					Les emballages sont fabriques a partir de dechets post consommations et tous les packagings secondaires sont en papiers ou en cartons. Kevin Murphy ne cause aucune souffrance et n'effectue pas de tests sur les animaux. </p>
+					Les emballages sont fabriqués à partir de dechets post consommations et tous les packagings secondaires sont en papiers ou en cartons. Kevin Murphy ne cause aucune souffrance et n'effectue pas de tests sur les animaux. </p>
 					</div>
 					<div class="km-image-fond">
 						<img src="../images/galerie/visage+fleur.PNG" alt="">
@@ -184,14 +184,14 @@
 				</div>
 				<div class="ghd-text-container">
 					<div class="ghd-partie1">
-						<p>S'il y a bien une marque qui nous met toutes d'accord pour ce qui est des fers a lisser, des boucleurs, des seches cheveux et des produits capillairesm c'est bien GHD. Depuis 2021, l'enseigne Anglaise professionnelle du coiffage haut de gamme se demene pour offrir aux femmes des outils performants et innovants</p>
+						<p>S'il y a bien une marque qui nous met toutes d'accord pour ce qui est des fers à lisser, des boucleurs, des sèches cheveux et des produits capillaires c'est bien GHD. Depuis 2021, l'enseigne Anglaise professionnelle du coiffage haut de gamme se démène pour offrir aux femmes des outils performants et innovants</p>
 					</div>
 					<div class="ghd-separation"></div>
 					<div class="ghd-partie2">
 						<h1>Salon Ambassadeur</h1>
 						<br>
-						<p>Nous sommes heureux de vous annoncer que nous sommes Ambassadeur GHD. Desormais, vous aurez acces aux dernieres nouveautes en exclusivite dans votre salon Laurent Chevallier Coiffure.
-						Vous pourrez beneficier de formations digitales post achat de votre nouvel appareilm et vous allez pouvoir personnaliser certains de vos outils.
+						<p>Nous sommes heureux de vous annoncer que nous sommes Ambassadeur GHD. Desormais, vous aurez accès aux dernières nouveautées en exclusivité dans votre salon Laurent Chevallier Coiffure.
+						Vous pourrez béneficier de formations digitales post achat de votre nouvel appareil et vous allez pouvoir personnaliser certains de vos outils.
 						</p>
 					</div>
 				</div>
