--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
 					</div>
 				</button>
 				<ul class="menu-left">
-					<li><a href="../html/accueil.html">ACCUEIL</a></li>
-					<li><a href="../html/galerie.html">GALERIE</a></li>
+					<li><a href="accueil.html">ACCUEIL</a></li>
+					<li><a href="galerie.html">GALERIE</a></li>
 				</ul>
 				<div class="menu-right">
-					<div class="principale"><img src="../images/galerie/coiffure.jpg" alt="coiffure"></div>
+					<div class="principale"><img src="coiffure.jpg" alt="coiffure"></div>
 					<div class="fleur">
-						<img src="../images/galerie/fleurs.PNG" alt="">
+						<img src="fleurs.PNG" alt="">
 					</div>
 					<div class="fleur2">
-						<img src="../images/galerie/fleur2.PNG" alt="">
+						<img src="fleur2.PNG" alt="">
 					</div>
 				</div>
 				<div class="container-logo">
 					<div class="logo">
-						<img src="../images/icones/Logo.PNG" alt="">
+						<img src="Logo.PNG" alt="">
 					</div>
 				</div>
 				<form action="https://www.planity.com/laurent-chevallier-coiffure-47300-villeneuve-sur-lot?utm_medium=ppc&utm_term=&utm_campaign=&utm_source=adwords&hsa_src=g&hsa_mt=&hsa_net=adwords&hsa_acc=5004013359&hsa_grp=139255406091&hsa_tgt=dsa-1633483168042&hsa_cam=16283276366&hsa_ver=3&hsa_kw=&hsa_ad=583153150796&gclid=CjwKCAjw3cSSBhBGEiwAVII0ZxXreIFewjeywL5nw5-n-29YSWbsbabiKxB629N95OrQ4HDbkENwlRoCzuYQAvD_BwE" target="_blank">
