--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 				<div class="loader">
-					<div class="logo"><img src="../images/icones/Logo.PNG" alt=""></div>
+					<div class="logo"><img src="Logo.PNG" alt=""></div>
 				</div>
 				<button class="box">
 					<div class="container-lignes">
