--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 				<div class="loader">
-					<div class="logo"><img src="Logo.PNG" alt=""></div>
+					<div class="logo"><img src="Logo.PNG" alt="logo-principal"></div>
 				</div>
 				<button class="box">
 					<div class="container-lignes">
@@ -38,15 +38,15 @@
 				<div class="menu-right">
 					<div class="principale"><img src="coiffure.jpg" alt="coiffure"></div>
 					<div class="fleur">
-						<img src="fleurs.PNG" alt="">
+						<img src="fleurs.PNG" alt="fleur-1">
 					</div>
 					<div class="fleur2">
-						<img src="fleur2.PNG" alt="">
+						<img src="fleur2.PNG" alt="fleur-2">
 					</div>
 				</div>
 				<div class="container-logo">
 					<div class="logo">
-						<img src="Logo.PNG" alt="">
+						<img src="Logo.PNG" alt="logo-lcc">
 					</div>
 				</div>
 				<form action="https://www.planity.com/laurent-chevallier-coiffure-47300-villeneuve-sur-lot?utm_medium=ppc&utm_term=&utm_campaign=&utm_source=adwords&hsa_src=g&hsa_mt=&hsa_net=adwords&hsa_acc=5004013359&hsa_grp=139255406091&hsa_tgt=dsa-1633483168042&hsa_cam=16283276366&hsa_ver=3&hsa_kw=&hsa_ad=583153150796&gclid=CjwKCAjw3cSSBhBGEiwAVII0ZxXreIFewjeywL5nw5-n-29YSWbsbabiKxB629N95OrQ4HDbkENwlRoCzuYQAvD_BwE" target="_blank">
@@ -54,11 +54,11 @@
 				</form>
 				<div class="box-telephone">
 					<div class="nav-telephone">
-						<a href="https://www.facebook.com/Laurent-Chevallier-Coiffure-1574396299470582" id="fb" target="_blank"><img src="../images/icones/fb.PNG"/></a>
+						<a href="https://www.facebook.com/Laurent-Chevallier-Coiffure-1574396299470582" id="fb" target="_blank"><img src="fb.PNG"/></a>
 						<form action="https://www.planity.com/laurent-chevallier-coiffure-47300-villeneuve-sur-lot?utm_medium=ppc&utm_term=&utm_campaign=&utm_source=adwords&hsa_src=g&hsa_mt=&hsa_net=adwords&hsa_acc=5004013359&hsa_grp=139255406091&hsa_tgt=dsa-1633483168042&hsa_cam=16283276366&hsa_ver=3&hsa_kw=&hsa_ad=583153150796&gclid=CjwKCAjw3cSSBhBGEiwAVII0ZxXreIFewjeywL5nw5-n-29YSWbsbabiKxB629N95OrQ4HDbkENwlRoCzuYQAvD_BwE" target="_blank">
 						<button class="rdv-tel" type="submit">Rendez-vous</button>
 						</form>
-						<a href="https://www.instagram.com/laurentchevalliercoiffure/" id="insta" target="_blank"><img src="../images/icones/insta.PNG"/></a>
+						<a href="https://www.instagram.com/laurentchevalliercoiffure/" id="insta" target="_blank"><img src="insta.PNG"/></a>
 					</div>
 				</div>
 		</header>
@@ -75,13 +75,13 @@
 					</div>
 				</button>
 				<div class="icones">
-					<a href="https://www.facebook.com/Laurent-Chevallier-Coiffure-1574396299470582" id="fb" target="_blank"><img src="../images/icones/fb.PNG"/></a>
-					<a href="https://www.instagram.com/laurentchevalliercoiffure/" id="insta" target="_blank"><img src="../images/icones/insta.PNG"/></a>
+					<a href="https://www.facebook.com/Laurent-Chevallier-Coiffure-1574396299470582" id="fb" target="_blank"><img src="fb.PNG"/></a>
+					<a href="https://www.instagram.com/laurentchevalliercoiffure/" id="insta" target="_blank"><img src="insta.PNG"/></a>
 				</div>
 			</div>
 			<div class="presentation">
 				<div class="presentation-image">
-					<img src="../images/galerie/lccoiffure.jpg" alt="merlish">
+					<img src="lccoiffure.jpg" alt="merlish">
 				</div>
 				<article class="text-presentation">
 					<h1>Votre personnalité, <br> notre métier</h1><br>
@@ -94,12 +94,12 @@
 			<div class="carousel">
 				<div class="slider">
 					<div class="slides">
-						<div class="slide"><img src="../images/salon/Salon1.jpg" alt="photo-salon"></div>
-						<div class="slide"><img src="../images/salon/Salon2.jpg" alt="photo-salon-2"></div>
-						<div class="slide"><img src="../images/salon/Salon3.jpg" alt="photo-salon-3"></div>
-						<div class="slide"><img src="../images/salon/Salon4.jpg" alt="photo-salon-4"></div>
-						<div class="slide"><img src="../images/salon/Salon5.jpg" alt="photo-salon-5"></div>
-						<div class="slide"><img src="../images/salon/Salon6.jpg" alt="photo-salon-6"></div>
+						<div class="slide"><img src="Salon1.jpg" alt="photo-salon"></div>
+						<div class="slide"><img src="Salon2.jpg" alt="photo-salon-2"></div>
+						<div class="slide"><img src="Salon3.jpg" alt="photo-salon-3"></div>
+						<div class="slide"><img src="Salon4.jpg" alt="photo-salon-4"></div>
+						<div class="slide"><img src="Salon5.jpg" alt="photo-salon-5"></div>
+						<div class="slide"><img src="Salon6.jpg" alt="photo-salon-6"></div>
 					</div>
 				</div>
 			</div>
@@ -109,14 +109,14 @@
 					</div>
 					<div class="equipe-container">
 						<div class="laurent">
-							<img src="../images/equipe/Laurent.JPG" alt="Laurent">
+							<img src="Laurent.JPG" alt="Laurent">
 							<div class="overlay">
 								<div class="content">
 									Laurent
 								</div>
 							</div>
 						</div><div class="isabelle">
-							<img src="../images/equipe/Isabelle.JPG" alt="Isabelle">
+							<img src="Isabelle.JPG" alt="Isabelle">
 							<div class="overlay">
 								<div class="content">
 									Isabelle
@@ -124,7 +124,7 @@
 							</div>
 						</div>
 						<div class="alizee">
-							<img src="../images/equipe/Alizee.JPG" alt="Alizee" id="Alizee">
+							<img src="Alizee.JPG" alt="Alizee" id="Alizee">
 							<div class="overlay">
 								<div class="content">
 									Alizée
@@ -132,7 +132,7 @@
 							</div>
 						</div>
 						<div class="frederique">
-							<img src="../images/equipe/Frederique.JPG" alt="Frederique">
+							<img src="Frederique.JPG" alt="Frederique">
 							<div class="overlay">
 								<div class="content">
 									Frédérique
@@ -140,7 +140,7 @@
 							</div>
 						</div>
 						<div class="nathan">
-							<img src="../images/equipe/Nathan.JPG" alt="Nathan">
+							<img src="Nathan.JPG" alt="Nathan">
 							<div class="overlay">
 								<div class="content">
 									Nathan
@@ -152,15 +152,15 @@
 			<div class="kevin-murphy">
 				<div class="titre">#Kevin.Murphy</div>
 				<div class="item-container">
-					<div class="items item1"><img src="../images/km/km1red.jpeg" alt="km"></div>
-					<div class="items item2"><img src="../images/km/pose1red.png" alt="km1"></div>
-					<div class="items item3"><img src="../images/km/km2red.jpeg" alt="km2"></div>
-					<div class="items item4"><img src="../images/km/pose2red.jpeg" alt="km3"></div>
-					<div class="items item5"><img src="../images/km/km3red.jpeg" alt="km4"></div>
-					<div class="items item6"><img src="../images/km/pose3red.jpeg" alt="km5"></div>
-					<div class="items item7"><img src="../images/km/km4red.jpeg" alt="km6"></div>
-					<div class="items item8"><img src="../images/km/pose4red.jpeg" alt="km7"></div>
-					<div class="items item9"><img src="../images/km/km5red.jpeg" alt="km8" id="km5red"></div>
+					<div class="items item1"><img src="km1red.jpeg" alt="km"></div>
+					<div class="items item2"><img src="pose1red.png" alt="km1"></div>
+					<div class="items item3"><img src="km2red.jpeg" alt="km2"></div>
+					<div class="items item4"><img src="pose2red.jpeg" alt="km3"></div>
+					<div class="items item5"><img src="km3red.jpeg" alt="km4"></div>
+					<div class="items item6"><img src="pose3red.jpeg" alt="km5"></div>
+					<div class="items item7"><img src="km4red.jpeg" alt="km6"></div>
+					<div class="items item8"><img src="pose4red.jpeg" alt="km7"></div>
+					<div class="items item9"><img src="km5red.jpeg" alt="km8" id="km5red"></div>
 				</div>
 				<div class="km-container">
 					<div class="km-text-container">
@@ -171,16 +171,16 @@
 					Les emballages sont fabriqués à partir de dechets post consommations et tous les packagings secondaires sont en papiers ou en cartons. Kevin Murphy ne cause aucune souffrance et n'effectue pas de tests sur les animaux. </p>
 					</div>
 					<div class="km-image-fond">
-						<img src="../images/galerie/visage+fleur.PNG" alt="">
+						<img src="visage+fleur.PNG" alt="">
 					</div>
 				</div>
 			</div>
 			<div class="ghd">
 				<h1>Good Hair Day</h1>
 				<div class="ghd-img-container">
-					<div class="ghd-img image1"><img src="../images/ghd/ghd1.jpg" alt="ghd1"></div>
-					<div class="ghd-img image2"><img src="../images/ghd/ghd2.jpg" alt="ghd2"></div>
-					<div class="ghd-img image3"><img src="../images/ghd/ghd3.jpg" alt="ghd3"></div>
+					<div class="ghd-img image1"><img src="ghd1.jpg" alt="ghd1"></div>
+					<div class="ghd-img image2"><img src="ghd2.jpg" alt="ghd2"></div>
+					<div class="ghd-img image3"><img src="ghd3.jpg" alt="ghd3"></div>
 				</div>
 				<div class="ghd-text-container">
 					<div class="ghd-partie1">
@@ -202,21 +202,21 @@
 				<div class="contact-container">
 					<div class="adresse">
 						<a href="https://goo.gl/maps/Vu9cJ1dJ5cakVB73A" target="_blank">
-							<img src="../images/icones/maps.png" alt="adresse">
+							<img src="maps.png" alt="adresse">
 						13 rue de Paris, 47300 Villeneuve sur lot</a>
 					</div>
 					<div class="telephone">
 						<a href="tel: 05 53 40 13 05">
-							<img src="../images/icones/tel.PNG" alt="telephone">
+							<img src="tel.PNG" alt="telephone">
 						05 53 40 13 05</a>
 					</div>
 					<div class="footer-icones">
-						<a href="https://www.facebook.com/Laurent-Chevallier-Coiffure-1574396299470582" id="fb" target="_blank"><img src="../images/icones/circlefb.png"/></a>
-						<a href="https://www.instagram.com/laurentchevalliercoiffure/" id="insta" target="_blank"><img src="../images/icones/circleinsta.png"/></a>
+						<a href="https://www.facebook.com/Laurent-Chevallier-Coiffure-1574396299470582" id="fb" target="_blank"><img src="circlefb.png"/></a>
+						<a href="https://www.instagram.com/laurentchevalliercoiffure/" id="insta" target="_blank"><img src="circleinsta.png"/></a>
 					</div>
 				</div>
 				<div class="footer-logo">
-					<img src="../images/icones/Logo.PNG" alt="">
+					<img src="Logo.PNG" alt="">
 				</div>
 				<div class="horaires">
 					<h1>Les Horaires</h1>
