--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 					</div>
 					<div class="equipe-container">
 						<div class="laurent">
-							<img src="Laurent.JPG" alt="Laurent">
+							<img src="Laurent.jpg" alt="Laurent">
 							<div class="overlay">
 								<div class="content">
 									Laurent
 								</div>
 							</div>
 						</div><div class="isabelle">
-							<img src="Isabelle.JPG" alt="Isabelle">
+							<img src="Isabelle.jpg" alt="Isabelle">
 							<div class="overlay">
 								<div class="content">
 									Isabelle
@@ -124,7 +124,7 @@
 							</div>
 						</div>
 						<div class="alizee">
-							<img src="Alizee.JPG" alt="Alizee" id="Alizee">
+							<img src="Alizee.jpg" alt="Alizee" id="Alizee">
 							<div class="overlay">
 								<div class="content">
 									Alizée
@@ -132,7 +132,7 @@
 							</div>
 						</div>
 						<div class="frederique">
-							<img src="Frederique.JPG" alt="Frederique">
+							<img src="Frederique.jpg" alt="Frederique">
 							<div class="overlay">
 								<div class="content">
 									Frédérique
@@ -140,7 +140,7 @@
 							</div>
 						</div>
 						<div class="nathan">
-							<img src="Nathan.JPG" alt="Nathan">
+							<img src="Nathan.jpg" alt="Nathan">
 							<div class="overlay">
 								<div class="content">
 									Nathan
